<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="113dp"
        android:layout_height="139dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/emailfield"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/lock_icon" />

    <TextView
        android:id="@+id/emailfield"
        android:layout_width="255dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"

        android:background="@drawable/field_drawable"
        android:fontFamily="@font/tiltneon_regular"
        android:gravity="start|center_vertical"
        android:hint="@string/email_field"
        android:paddingStart="15dp"
        android:shadowColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordfield"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/passwordfield"
        android:layout_width="255dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/field_drawable"
        android:ems="10"
        android:hint="@string/password_field"
        android:paddingStart="15dp"
        android:textSize="16sp"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:fontFamily="@font/tiltneon_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailfield" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/corner_radius"
        android:fontFamily="@font/tiltwarp_regular"
        android:letterSpacing=".19"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordfield" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="177dp"
        android:fontFamily="@font/tiltwarp_regular"
        android:text="@string/login_header"
        android:textAlignment="center"
        android:textFontWeight="700"
        android:textSize="40dp"
        android:textColor="@color/black"
        android:letterSpacing=".20"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/tiltneon_regular"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googlebtn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/corner_radius"
        android:drawableStart="@drawable/google_icon"
        android:fontFamily="@font/tiltwarp_regular"
        android:letterSpacing=".3"
        android:text="@string/google"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>